--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@nestjs/platform-express": "^6.3.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^2.6.3",
-    "rxjs": "^6.5.2"
+    "rxjs": "^6.5.2",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@nestjs/testing": "^6.3.2",
