--- a/package.json
+++ b/package.json
@@ -20,16 +20,18 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^6.3.2",
-    "@nestjs/core": "^6.3.2",
-    "@nestjs/platform-express": "^6.3.2",
+    "@nestjs/common": "^6.4.0",
+    "@nestjs/core": "^6.4.0",
+    "@nestjs/platform-express": "^6.4.0",
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.9.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^2.6.3",
     "rxjs": "^6.5.2",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "@nestjs/testing": "^6.3.2",
+    "@nestjs/testing": "^6.4.0",
     "@types/express": "^4.17.0",
     "@types/jest": "^24.0.15",
     "@types/node": "^12.0.10",
